# rowview

./: AGENTS.rs  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
rowview_macro/: Cargo.toml
rowview_macro/src/: docs.rs  generate.rs  lib.rs  schema.rs  select.rs  solve.rs
rowview_macros/: Cargo.toml
rowview_macros/src/: lib.rs
src/: docs.rs  generate.rs  ir.rs  lib.rs  oql.rs  oql_row.rs  parse.rs  patterns.rs  query.rs  schema.rs  solve.rs
tests/: Cargo.toml  derive.rs  docs.rs
tests/docs/: basics.rs  fin.rs  mod.rs
tests/docs/advanced/: axis.rs  biconvert.rs  constrains.rs  constraints.rs  incrementer.rs  join_left.rs  lifetimes.rs  mod.rs  natural_keys.rs
tests/docs/advanced/bind/: axis.rs
tests/docs/advanced/join/: index.rs  keys.rs  mod.rs  multi.rs  result.rs  right.rs  zip.rs
tests/docs/advanced/math/: agg.rs  incrementer.rs  mod.rs
tests/docs/basics/: attributes.rs  axis.rs  getters.rs  imports.rs  incrementer.rs  index.rs  join_left.rs  left_join.rs  mod.rs  singleton.rs
tests/docs/basics/join/: duplicates.rs  left.rs  must.rs
tests/docs/basics/math/: agg.rs  incrementer.rs  mod.rs  sum.rs
tests/docs/examples/: fin.rs  game.rs  god.rs  mod.rs
tests/docs/path/: mod.rs
tests/docs/path/advanced/join/: index.rs  keys.rs  multi.rs  result.rs  zip.rs
tests/docs/path/basics/: imports.rs
tests/docs/path/basics/join/: mod.rs  must.rs
tests/docs/path/basics/math/: agg.rs
tests/docs/path/examples/: fin.rs  game.rs
tests/docs/select/: mod.rs
tests/src/: lib.rs
tests/src/docs/: mod.rs
(+20 files in other folders)
